--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-numpy>=1.26.4,<2.0.0
-pandas>=1.5.3,<2.0.0
-matplotlib>=3.9.0
-tqdm>=4.66.4
-anndata>=0.8.0
-kb-python>=0.29.1
-gget>=0.29.0
-biopython>=1.83
-scipy>=1.13.1
-pyfastx>=2.1.0
+
+matplotlib-venn>=1.1.1
+ipython>=8.24.0
+dna_features_viewer>=3.1.3
+goatools>=1.4.9
+multiqc>=1.25.1
+rich>=13.9.2
+pysam>=0.22.1
+leidenalg>=0.10.2
+kneed>=0.8.5
