--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,6 @@ jobs:
           python-version: ${{ matrix.python }}
           architecture: x64
       - name: Install dependencies
-        run: python -m pip install --upgrade pip && pip install pytest>=7.0.0 -r requirements.txt
+        run: python -m pip install --upgrade pip && pip install pytest>=7.0.0 coverage -r requirements.txt
       - name: Run tests
         run: coverage run -m pytest -ra -v tests && coverage report --omit=main.py,tests*
