--- a/environment.yml
+++ b/environment.yml
@@ -9,5 +9,6 @@ dependencies:
   - curl>=7.73.0
   - fastqc>=0.12.1
   - fastp>=0.23.4
+  - samtools>=1.20
   - pip:
       - -r requirements.txt  # or use `pyproject.toml` for Python packages
