--- a/environment.yml
+++ b/environment.yml
@@ -10,5 +10,6 @@ dependencies:
   - fastqc>=0.12.1
   - fastp>=0.23.4
   - samtools>=1.20
+  - bowtie2>=2.5.4
   - pip:
       - -r requirements.txt  # or use `pyproject.toml` for Python packages
