--- a/environment.yml
+++ b/environment.yml
@@ -8,8 +8,9 @@ dependencies:
   - kat>=2.4.2
   - curl>=7.73.0
   - fastqc>=0.12.1
+  - multiqc>=1.6
   - fastp>=0.23.4
-  - samtools>=1.20
   - bowtie2>=2.5.4
+  - seqtk>=1.4
   - pip:
       - -r requirements.txt  # or use `pyproject.toml` for Python packages
