--- a/.github/workflows/Pytest.yml
+++ b/.github/workflows/Pytest.yml
@@ -25,7 +25,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install pytest>=7.0.0
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        if [ -f pyproject.toml ]; then pip install .; fi
 
     - name: Test with pytest
       run: |
