--- a/.github/workflows_extra/Notebooks.yml
+++ b/.github/workflows_extra/Notebooks.yml
@@ -25,7 +25,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install pytest nbdime nbval
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        if [ -f pyproject.toml ]; then pip install .; fi
 
     - name: Test jupyter notebooks with nbval
       run: |
