--- a/.github/workflows/Pytest_conda.yml
+++ b/.github/workflows/Pytest_conda.yml
@@ -28,7 +28,9 @@ jobs:
     - name: Install dependencies
       run: |
         conda env update --file environment.yml --name base
-
+    - name: Configure conda to use the classic solver
+      run: |
+        conda config --set solver_backend classic
     - name: Test with pytest
       run: |
         conda install pytest
