about to remove config feature, and will erase params_dict from ref and count in exchange for kwargs

--- a/config_test.yaml
+++ b/config_test.yaml
@@ -2,6 +2,7 @@ sequences: "cdna"
 variants: "cosmic_cmc"
 w: 44
 k: 49
-mode: "normal"
+logging_level: "20"
+optimize_flanking_regions: False
 unknown_arg: True
 dry_run: True
