--- a/environment.yml
+++ b/environment.yml
@@ -4,11 +4,10 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python>=3.7
-  - kat>=2.4.2
+  - python=3.10
+  # - kat>=2.4.2  # only python 3.7-3.9
   - curl>=7.73.0
   - fastqc>=0.12.1
-  - multiqc>=1.6
   - fastp>=0.23.4
   - bowtie2>=2.5.4
   - seqtk>=1.4
