--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ dependencies = [
     "scipy>=1.13.1",
     "pyfastx>=2.1.0",
     "pysam>=0.22.1",
+    "fastparquet>=2024.11.0"
 ]
 
 [project.optional-dependencies]
