--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,7 +66,8 @@ analysis = [
     "scanpy>=1.10.4",
     "upsetplot>=0.9.0",
     "rpy2>=3.5.17",
-    "pykegg>=0.1.7"
+    "pykegg>=0.1.7",
+    "cyvcf2>=0.31.1",
 ]
 
 
