--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,10 +64,10 @@ analysis = [
     "kneed>=0.8.0",
     "scanpy>=1.10.4",
     "upsetplot>=0.9.0",
-    "rpy2>=3.5.17",
     "pykegg>=0.1.7",
     "cyvcf2>=0.31.1",
     "seaborn>=0.13.2",
+    "adjustText>=1.3.0"
 ]
 
 
